<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity=""
    tools:context="rahee.experitest.com.espressotask.MainActivity">

    <EditText
        android:id="@+id/inputField"
        android:hint="@string/enter_your_text_here"
        android:layout_centerHorizontal="true"
        android:maxLength="10"
        android:layout_above="@id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_centerInParent="true"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/change_text" />

    <TextView
        android:id="@+id/textViewField"
        android:layout_below="@id/button"
        android:text="@string/this_will_display_the_changed_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
